--- a/views/opcions.ejs
+++ b/views/opcions.ejs
@@ -119,26 +119,22 @@
     </div>
 
     <script>
-        // Agrega eventos click a los botones
         document.getElementById("button1").addEventListener("click", function () {
-            window.location.href = "/activitat"; 
+            window.location.href = "/activitats"; 
+
         });
 
         document.getElementById("button2").addEventListener("click", function () {
             window.location.href = "/activitat1"; 
         });
 
-        // Agrega eventos click a los nuevos botones
         document.getElementById("button4").addEventListener("click", function () {
-            // Acción del botón 4
         });
 
         document.getElementById("button5").addEventListener("click", function () {
-            // Acción del botón 5
         });
 
         document.getElementById("button6").addEventListener("click", function () {
-            // Acción del botón 6
         });
     </script>
 
