--- a/views/activitats1.ejs
+++ b/views/activitats1.ejs
@@ -7,22 +7,60 @@
         body {
             background-color: #C7F48E;
             padding: 20px;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+            height: 100vh; /* Establece el 100% de la altura de la ventana */
+        }
+
+        h1 {
+            display: inline-block;
+            background-image: linear-gradient(to right, violet, indigo, blue, green, yellow, orange, red);
+            -webkit-background-clip: text;
+            color: transparent;
         }
 
         .btn {
-            display: inline-block;
             text-decoration: none;
+            display: inline-block;
+            width: 40%;
             padding: 10px 20px;
             font-size: 18px;
             border-radius: 8px;
             background-color: #3498db;
             color: #ffffff;
             margin-top: 20px;
+            text-align: center;
+        }
+
+        .btn-1 {
+            background-color: #e74c3c;
+        }
+
+        .btn-2 {
+            background-color: #2ecc71;
+        }
+
+        .btn-3 {
+            background-color: #f39c12;
+        }
+
+        .btn-4 {
+            background-color: #9b59b6;
+        }
+
+        .btn-5 {
+            background-color: #34495e;
+        }
+
+        .btn-6 {
+            background-color: #e67e22;
         }
 
         .btn img {
-            width: 100px; /* Ancho fijo */
-            height: 100px; /* Altura fija */
+            width: 100px;
+            height: 100px;
             margin-bottom: 10px;
             float: left;
             margin-right: 20px;
@@ -35,15 +73,53 @@
 
     <h1>Actividad</h1>
 
-    <a href="#" class="btn btn-info rounded-button btn-custom-7" id="button1">
-        <div class="button-text">Diagnosis Dents</div>
+    <a href="#" class="btn btn-info rounded-button btn-custom-7 btn-1" id="button1">
+        <div class="button-text">Diagnosis Dents 1</div>
+    </a>
+
+    <a href="#" class="btn btn-info rounded-button btn-custom-7 btn-2" id="button2">
+        <div class="button-text">Diagnosis Dents 2</div>
+    </a>
+
+    <a href="#" class="btn btn-info rounded-button btn-custom-7 btn-3" id="button3">
+        <div class="button-text">Diagnosis Dents 3</div>
+    </a>
+
+    <a href="#" class="btn btn-info rounded-button btn-custom-7 btn-4" id="button4">
+        <div class="button-text">Diagnosis Dents 4</div>
+    </a>
+
+    <a href="#" class="btn btn-info rounded-button btn-custom-7 btn-5" id="button5">
+        <div class="button-text">Diagnosis Dents 5</div>
+    </a>
+
+    <a href="#" class="btn btn-info rounded-button btn-custom-7 btn-6" id="button6">
+        <div class="button-text">Diagnosis Dents 6</div>
     </a>
 
     <script>
-        // Agrega un evento click al botón 1
         document.getElementById("button1").addEventListener("click", function () {
-            // Redirige a la página /prova_carie
             window.location.href = "/prova_carie";
+        });
+
+        document.getElementById("button2").addEventListener("click", function () {
+            window.location.href = "/prova_carie2";
+        });
+
+        document.getElementById("button3").addEventListener("click", function () {
+            window.location.href = "/prova_carie3";
+        });
+
+        document.getElementById("button4").addEventListener("click", function () {
+            window.location.href = "/prova_carie4";
+        });
+
+        document.getElementById("button5").addEventListener("click", function () {
+            window.location.href = "/prova_carie5";
+        });
+
+        document.getElementById("button6").addEventListener("click", function () {
+            window.location.href = "/prova_carie6";
         });
     </script>
 </body>
