--- a/views/cronologia5.ejs
+++ b/views/cronologia5.ejs
@@ -2,20 +2,22 @@
 <html lang="es">
 
 <head>
-    <title>Enfermedades Bucodentales</title>
+    <meta charset="UTF-8">
+    <title>ELS SEGONS MOLARS ERUPCIONEN ALS 11-13 ANYS?</title>
     <style>
         body {
             background-color: #C7F48E;
             display: flex;
+            flex-direction: column;
             align-items: center;
             justify-content: center;
-            height: 100vh;
+            min-height: 100vh;
             margin: 0;
         }
 
         #contenedor {
             display: flex;
-            align-items: flex-start; /* Alinea los elementos al inicio */
+            align-items: flex-start;
         }
 
         #imagen-carie {
@@ -38,8 +40,6 @@
             cursor: pointer;
         }
 
-        
-
         .enfermedad-verde {
             background-color: #008000;
             color: #fff;
@@ -53,15 +53,14 @@
 </head>
 
 <body>
+    <h1>ELS SEGONS MOLARS ERUPCIONEN ALS 11-13 ANYS?</h1>
+
     <div id="contenedor">
-        <img id="imagen-carie" src="foto_carie.png" alt="Foto Carie">
+        <img id="imagen-carie" src="Crono5.png" alt="Foto Carie">
 
         <div class="enfermedad-buttons">
-            <button class="enfermedad-button" onclick="cambiarColor(this, 'rojo')">A) Càries</button>
-            <button class="enfermedad-button" onclick="cambiarColor(this, 'rojo')">B) Fluorosis</button>
-            <button class="enfermedad-button" onclick="cambiarColor(this, 'verde')">C) Maloclusió</button>
-            <button class="enfermedad-button" onclick="cambiarColor(this, 'rojo')">D) Bruxisme</button>
-            <button class="enfermedad-button" onclick="cambiarColor(this, 'rojo')">E) Fractura</button>
+            <button class="enfermedad-button" onclick="cambiarColor(this, 'rojo')">A) NO</button>
+            <button class="enfermedad-button" onclick="cambiarColor(this, 'verde')">B) SI</button>
         </div>
     </div>
 
@@ -97,7 +96,6 @@
         // Llamar a la función al cargar la página
         window.onload = reorganizarAleatoriamente;
     </script>
-
 </body>
 
 </html>
