--- a/views/detalle_actividad.ejs
+++ b/views/detalle_actividad.ejs
@@ -26,7 +26,7 @@
         const actividadId = urlParams.get('id');
 
         // Realizar una solicitud al servidor Node.js para obtener los detalles de la actividad seleccionada
-        fetch(`http://192.168.56.120:3000/actividades/${actividadId}`)
+        fetch(`/actividades/${actividadId}`)
             .then(response => response.json())
             .then(actividad => {
                 const titulo = document.getElementById('titulo-actividad');
