--- a/views/login.ejs
+++ b/views/login.ejs
@@ -37,7 +37,7 @@
             const username = document.querySelector('#username').value;
             const password = document.querySelector('#password').value;
 
-            const response = await fetch('http://localhost:3000/login', {
+            const response = await fetch('/login', {
                 method: 'POST',
                 headers: {
                     'Content-Type': 'application/json'
